arr-stack/sabnzbd/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: sabnzbd-kube
spec:
  replicas: 1
  selector:
    matchLabels:
      app: sabnzbd-kube
  strategy:
    type: Recreate
  template:
    metadata:
      labels:
        app: sabnzbd-kube
    spec:
      containers:
        - env:
            - name: PGID
              value: "1000"
            - name: PUID
              value: "1000"
            - name: TZ
              value: America/Chicago
          image: lscr.io/linuxserver/sabnzbd:latest
          name: sabnzbd
          ports:
            - containerPort: 8080
              protocol: TCP
          volumeMounts:
            - mountPath: /config
              name: sabnzbd-config-claim
            - mountPath: /downloads
              name: downloads
      restartPolicy: Always
      volumes:
        - name: sabnzbd-config-claim
          persistentVolumeClaim:
            claimName: sabnzbd-config-claim

        - name: downloads
          flexVolume:
            driver: "fstab/cifs"
            fsType: "cifs"
            secretRef:
              name: "cifs-secret"
            options:
              networkPath: "//192.168.1.11/datapool/media/downloads"
              mountOptions: "uid=1000,gid=1000"
